--- a/common/settings.yaml
+++ b/common/settings.yaml
@@ -24,6 +24,17 @@ safe_mode:
   num_attempts: 5
 
 ################################################################################
+# Network Settings
+################################################################################
+# Ensure mDNS is enabled
+mdns:
+  disabled: false
+
+# Disable IPV6
+network:
+    enable_ipv6: false
+    
+################################################################################
 # Time
 ################################################################################
 time:
